--- a/views/index.pug
+++ b/views/index.pug
@@ -3,7 +3,7 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
-  div(id=recipe)
-    p(id=recipe-name)
-    ul(id=instructions)
-    ul(id=ingridients)
+  div(id="recipe")
+    p(id="recipe-name")
+    ul(id="instructions")
+    ul(id="ingridients")
