Ready for task 2

--- a/views/index.pug
+++ b/views/index.pug
@@ -5,5 +5,5 @@ block content
   p Welcome to #{title}
   div(id="recipe")
     p(id="recipe-name")
-    ul(id="instructions")
-    ul(id="ingridients")
+    ul(id="instructions") Instructions:
+    ul(id="ingridients") Ingridients:
