--- a/views/index.pug
+++ b/views/index.pug
@@ -5,5 +5,5 @@ block content
   p Welcome to #{title}
   div(id="recipe")
     p(id="recipe-name")
-    p(id="instructions") Instructions:
-    p(id="ingridients") Ingridients:
+    ul(id="instructions") Instructions:
+    ul(id="ingridients") Ingridients:
