--- a/views/index.pug
+++ b/views/index.pug
@@ -3,6 +3,7 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
+  div 
   div(id="recipe")
     p(id="recipe-name")
     ul(id="instructions") Instructions:
