--- a/views/index.pug
+++ b/views/index.pug
@@ -7,4 +7,4 @@ block content
   div(id="recipe")
     p(id="recipe-name")
     ul(id="instructions") Instructions:
-    ul(id="ingridients") Ingridients:
+    ul(id="ingredients") Ingridients:
