--- a/views/index.pug
+++ b/views/index.pug
@@ -8,3 +8,15 @@ block content
     p(id="recipe-name")
     ul(id="instructions") Instructions:
     ul(id="ingredients") Ingridients:
+  h4 Name
+  input(type="text" id="name-text")
+  h4 Ingredients
+  textarea(id="ingredients-text")
+  button(type="button" id="add-ingredient") Add ingredient
+  h4 instructions
+  textarea(id="instructions-text")
+  button(id="add-instruction" type="button") Add instruction 
+  button(id="submit" type="submit") Submit
+  div(id="waiting-container")
+    ul(id="waiting-ingredients")
+    ul(id="waiting-instructions")
