--- a/views/index.pug
+++ b/views/index.pug
@@ -15,7 +15,10 @@ block content
   button(type="button" id="add-ingredient") Add ingredient
   h4 instructions
   textarea(id="instructions-text")
-  button(id="add-instruction" type="button") Add instruction 
+  button(id="add-instruction" type="button") Add instruction
+  br
+  input(id="image-input" type="file" accept="image/*" multiple) 
+  br
   button(id="submit" type="submit") Submit
   div(id="waiting-container")
     ul(id="waiting-ingredients")
